--- a/1-guia/ejercicios-1/ej-8-1.tex
+++ b/1-guia/ejercicios-1/ej-8-1.tex
@@ -13,11 +13,9 @@ Recordando la definición de conjunto de partes:
 
 El conjunto de partes de $A$, $\partes(A)$, está formado por todos los conjuntos $B$ tal que $B$ es un subconjunto de $A$
 $$
-  \begin{cases}
-    \partes(A) = \set{B \talque B \subseteq A}
-  \end{cases}
+  \partes(A) = \set{B \talque B \subseteq A}
 $$
-Los elemntos del conjunto de $\partes(A)$ son conjuntos.
+Los elementos del conjunto de $\partes(A)$ son conjuntos.
 
 \begin{enumerate}[label=(\roman*)]
   \item $A = \set{1}$ entonces $\partes(A)$:
@@ -45,7 +43,7 @@ Los elemntos del conjunto de $\partes(A)$ son conjuntos.
   \item $
           A =
           \set{1, \set{1,2}, 3}
-        $ enteonces $\partes(A)$:
+        $ entonces $\partes(A)$:
         $$
           \cajaResultado{
             \partes(A) =
