--- a/6-guia/ejercicios-6/ej-11-6.tex
+++ b/6-guia/ejercicios-6/ej-11-6.tex
@@ -97,7 +97,7 @@ $$
             \draw[-Latex, thin] (-1.5,0) -- (1.5,0) node[below] {Re};
             \draw[-Latex, thin] (0,-1.5) -- (0,1.5) node[right] {Im};
             \draw[ultra thin] (0,0) circle (1);
-            \filldraw[thin] (0,0) circle (1pt); % Added the origin
+            \filldraw[thin] (0,0) circle (1pt);
             \foreach \x in {0,...,10} {
                 \filldraw (\x*360/10:1) circle (1pt);
                 \ifnum\x<10
