remaster ej 25 guia 3

--- a/2-guia/ejercicios-2-extra/ej-extra-12-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-12-2.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}\fechaEjercicio{final 23/02/2023}
+\begin{enunciado}{\ejExtra[final 23/02/2023]}\fechaEjercicio{final 23/02/2023}
   Sea $(a_n)_{n \en \naturales}$ la sucesión de números enteros definida recursivamente de la forma siguiente:
   $$
     a_1 = 10
