--- a/2-guia/ejercicios-2-extra/ej-extra-13-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-13-2.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}\fechaEjercicio{(7/10/25) primer parcial}
+\begin{enunciado}{\ejExtra[1er parcial 7/10/25]}\fechaEjercicio{1er parcial 7/10/25}
 
   Probar por inducción que $\sumatoria{k=1}{n} k! \geq \frac{2^n}{n+1}$ para todo $n \en \naturales$.
 \end{enunciado}
