--- a/3-guia/ejercicios-3-extra/ej-extra-8-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-8-3.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}\fechaEjercicio{recuperatorio 10/12/2024}
+\begin{enunciado}{\ejExtra[recu 10/12/2024]}\fechaEjercicio{recuperatorio 10/12/2024}
 
   ¿Cuántos anagramas tiene la palabra $LOLLAPALOOZA$ tales que
   \begin{enumerate}[label=$\alph*)$]
