--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -14,7 +14,7 @@
 % Un poco de teoría
 %=========================
 \phantomsection
-\addcontentsline{toc}{section}{Notas teóricas}
+\addcontentsline{toc}{section}{🧠 Notas teóricas}
 \subsubsection*{\hypertarget{teoria-\guia}{Notas teóricas:}}
 \input{./teoria-\guia/teoria-\guia.tex}
 
